compiler/test/integration/generative.err
TypeError in [test/integration/generative.brm:18.23-18.27]: ^^(12()) I32 15() is not a subtype of ^^(12()) I32 16()
because TypeError in [test/integration/generative.brm:18.23-18.27]: 15() is not a subtype of 16()
